# ai-chatbot-backend

./: .env.example  .env.staging.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  rag-readiness.yml
apps/analysis-console/: .gitignore  API_CONTRACTS.md  ARCHITECTURE.md  README.md  USER_GUIDE.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/bookcraft-sales-test-room/: README.md  index.html  package-lock.json  package.json  vite.config.ts
data/funnel/: funnel_stage_intents.sample.json
data/portfolio/: genre_hierarchy_links.json  portfolio_samples.docx  samples.registry.js
data/pricing/: default_assumptions.json  policy_rules.yaml  pricing_rules.yaml  service_catalog.yaml  timeline_rules.yaml
docs/: BCP_Service_Agreement_Full.ejs  analysis_console_backend_integration.md  analysis_console_chat_canary.md  bookcraft_ai_chatbot_ultimate_implementation_guide.md  bookcraft_implementation_guide (1).md  context-management-advisory.md  response-style-guide.md
docs/adr/: D-081-trimatch-funnel-stage-shadow.md  D-082-funnel-rule-governance-after-d081.md
docs/architecture/: architecture-amendments.md  architecture-reference.md  rag-elasticsearch-readiness-review.md  rag-production-rollout.md  rag-source-corpus-tracking-decision.md  trimatch-advisory-mode-design.md  trimatch-governance-final-readiness.md  trimatch-shortcut-application-gates.md  trimatch-shortcut-mode-design.md  trimatch-tiebreaker-mode-design.md  (+1 more)
migrations/: env.py
ops/: service-watchdog.sh
scripts/: e2e_concurrent_validation.py  e2e_consultation_lead_flow.py  prod_consultation_smoke.py
(+831 files in other folders)
