[project]
name = "bookcraft"
version = "0.1.0"
description = "BookCraft AI Chatbot foundation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "anthropic>=0.40",
  "asyncpg>=0.29",
  "dateparser>=1.2",
  "elasticsearch[async]>=8.13",
  "fastapi>=0.115",
  "httpx>=0.27",
  "jinja2>=3.1",
  "lingua-language-detector>=2.0",
  "openai>=1.50",
  "opentelemetry-api>=1.25",
  "opentelemetry-exporter-otlp>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
  "opentelemetry-sdk>=1.25",
  "phonenumbers>=8.13",
  "prometheus-client>=0.20",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "rapidfuzz>=3.6",
  "redis>=5.0",
  "sentry-sdk[fastapi]>=2.0",
  "spacy>=3.7",
  "sqlalchemy>=2.0",
  "sqlmodel>=0.0.22",
  "structlog>=24.1",
  "uvicorn[standard]>=0.30",
  "weasyprint>=62",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "testcontainers>=4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bookcraft"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_decorators = false
exclude = ["^tests/"]

